--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -8,11 +8,11 @@ on:
 jobs:
   myEvent:
     runs-on: self-hosted
-
+    container:
+      image: mikefarah/yq
     steps:
       - uses: actions/checkout@v2
 
       - name: Run PWD
         run: |
-          git version 
-          ls
+          cat values.yaml
