--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   myEvent:
     runs-on: self-hosted
+    container:
+      image: mikefarah/yq
     steps:
       - uses: actions/checkout@v2
 
