--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - main
-#  repository_dispatch:
-#    types: [my-event]
+  workflow_dispatch:
 jobs:
   myEvent:
     runs-on: self-hosted
