add semver parameter to workflow_dispatch

--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      semVersion:
+        description: The semantic version to be tagged and built.
+        required: true
 jobs:
   myEvent:
     runs-on: self-hosted
