create workflow using custom action

--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -7,3 +7,5 @@ jobs:
     steps:
       - name: Try custom action
         uses: akanthos/MyCustomAction@main
+        with:
+          valueToPrint: salami
