--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -1,6 +1,11 @@
 name: Try custom action
 on:
-  push:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: the env
+        type: environment
+        required: true
 jobs:
   myEvent:
     runs-on: ubuntu-latest
