--- a/.github/workflows/tag-bumper.yaml
+++ b/.github/workflows/tag-bumper.yaml
@@ -6,6 +6,15 @@ on:
         description: the env
         type: environment
         required: true
+      action:
+        description: Select action
+        type: choice
+        options:
+        - boostrap
+        - destroy
+        default: bootstrap
+        required: true
+
 jobs:
   myEvent:
     runs-on: self-hosted
