--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - run: |
+          ll
+          pwd
       - uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
