--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,3 +16,12 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         run: ./mvnw -B package --file pom.xml
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          tags: quarkus/getting-started-jvm:v1.0.0
