--- a/src/main/docker/Dockerfile-cached.jvm
+++ b/src/main/docker/Dockerfile-cached.jvm
@@ -75,16 +75,29 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
+FROM maven:3.8.6-eclipse-temurin-17 as build
+ENV HOME=/usr/app
+RUN mkdir -p $HOME
+WORKDIR $HOME
+ADD pom.xml $HOME
+RUN mvn verify --fail-never
+ADD . $HOME
+RUN mvn package
+
+#FROM openjdk:8-jdk-alpine
+#COPY --from=build /usr/app/target/single-module-caching-1.0-SNAPSHOT-jar-with-dependencies.jar /app/runner.jar
+#ENTRYPOINT java -jar /app/runner.jar
+
 FROM eclipse-temurin:17
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
 
 # We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
+COPY --from=build --chown=185 /usr/app/target/quarkus-app/lib/ /deployments/lib/
+COPY --from=build --chown=185 /usr/app/target/quarkus-app/*.jar /deployments/
+COPY --from=build --chown=185 /usr/app/target/quarkus-app/app/ /deployments/app/
+COPY --from=build --chown=185 /usr/app/target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
 USER 185
