--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build with Maven
-        run: ./mvnw -B package --file pom.xml
+        run: mvn -B package --file pom.xml
 
       - name: Build and push
         uses: docker/build-push-action@v3
