--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,10 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - run: |
+          ls
+          ls target/
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
