--- a/src/main/docker/Dockerfile-cached.jvm
+++ b/src/main/docker/Dockerfile-cached.jvm
@@ -77,14 +77,10 @@
 ###
 FROM maven:3.8.6-eclipse-temurin-17 as build
 ADD pom.xml .
-RUN mvn verify --fail-never
+RUN ./mvnw verify --fail-never
 
 ADD . .
 RUN mvn package
-
-#FROM openjdk:8-jdk-alpine
-#COPY --from=build /usr/app/target/single-module-caching-1.0-SNAPSHOT-jar-with-dependencies.jar /app/runner.jar
-#ENTRYPOINT java -jar /app/runner.jar
 
 FROM eclipse-temurin:17
 
