--- a/.github/workflows/test-path.yaml
+++ b/.github/workflows/test-path.yaml
@@ -37,9 +37,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-              - name: Setup Terraform
-
-      - uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.1
 
