--- a/.github/workflows/test-reusable-call.yaml
+++ b/.github/workflows/test-reusable-call.yaml
@@ -15,4 +15,4 @@ jobs:
         run: echo Hello, world!
 
   docker:
-    uses: akanthos/custom-actions/.github/workflows/test-reusable.yml@main
+    uses: akanthos/custom-actions/.github/workflows/test-reusable.yaml@main
