--- a/.github/workflows/needs.yaml
+++ b/.github/workflows/needs.yaml
@@ -20,5 +20,5 @@ jobs:
         working-directory: layers/${{ matrix.layer}}
     steps:
        - uses: actions/checkout@v3
-       - run: echo "${{ github }}"
+       - run: echo "$GITHUB_CONTEXT"
        
