--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -4,19 +4,20 @@ on:
   push:
   
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - run: |
-        mkdir test
-        echo "foo" >> test/file.txt
-        echo "bar" >> test/file.txt
-    - uses: actions/upload-artifact@v3
-      with:
-        name: "tfplan"
-        path: test/file.txt
-        retention-days: 3
-    - uses: actions/download-artifact@v3
-      with:
-        name: "tfplan"
-        path: test
-    - run: cat test/file.txt
+  artifacts:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          mkdir test
+          echo "foo" >> test/file.txt
+          echo "bar" >> test/file.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: "tfplan"
+          path: test/file.txt
+          retention-days: 3
+      - uses: actions/download-artifact@v3
+        with:
+          name: "tfplan"
+          path: test
+      - run: cat test/file.txt
