--- a/.github/workflows/triggers.yaml
+++ b/.github/workflows/triggers.yaml
@@ -12,6 +12,6 @@ on:
 jobs:
   plan:
     name: "Plan"
-    runs-on: [ self-hosted, azure ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
