Update and rename release.yaml to tricks.yaml

--- a/.github/workflows/tricks.yaml
+++ b/.github/workflows/tricks.yaml
@@ -1,10 +1,10 @@
-name: "Manual release"
+name: "Matrix tricks"
 
 on:
   push:
 
 jobs:
-  release:
+  tricks:
     runs-on: ubuntu-latest
     strategy:
       matrix:
