--- a/.github/workflows/guard.yaml
+++ b/.github/workflows/guard.yaml
@@ -4,7 +4,7 @@ on:
 jobs:
   guard:
     runs-on: ubuntu-20.04
-    if: !startsWith(github.ref, 'refs/tags/v')
+    if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
     steps:
       - run: exit 1
   
