Update and rename artifacts.yaml to envs-and-artifacts.yaml

--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -3,7 +3,7 @@ name: "Try environments and artifacts"
 on:
   workflow_dispatch:
     inputs:
-      env:
+      environment:
         type: environment
   
 jobs:
