--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -9,7 +9,9 @@ on:
 jobs:
   artifacts:
     runs-on: ubuntu-latest
+    environment: inputs.environment
     steps:
+      - uses: hmarr/debug-action@v2
       - run: |
           mkdir test
           echo "foo" >> test/file.txt
