--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -2,9 +2,9 @@ name: "Try environments and artifacts"
 
 on:
   workflow_dispatch:
-    inputs:
-      environment:
-        type: environment
+#     inputs:
+#       environment:
+#         type: environment
   
 jobs:
   artifacts:
