--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -4,11 +4,14 @@ on:
   workflow_dispatch:
     inputs:
       environment:
+        description: 'Environment to run tests against'
         type: environment
+        required: true
   
 jobs:
   artifacts:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     steps:
       - uses: hmarr/debug-action@v2
       - run: |
