--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -14,15 +14,16 @@ jobs:
     runs-on: [ self-hosted, azure ]
     steps:
       - name: Set output
-        run: echo "tag=${GITHUB_SHA:0:8}" >> $GITHUB_OUTPUT
+        run: echo "TAG=${GITHUB_SHA:0:8}" >> $GITHUB_OUTPUT
 
   artifacts:
+    needs: [tag]
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     steps:
       - uses: hmarr/debug-action@v2
       - run: |
-          echo "${{ jobs.tag.outputs.tag }}"
+          echo "${{ needs.tag.outputs.TAG }}"
 #       - uses: actions/upload-artifact@v3
 #         with:
 #           name: "tfplan"
