--- a/.github/workflows/envs-and-artifacts.yaml
+++ b/.github/workflows/envs-and-artifacts.yaml
@@ -12,9 +12,12 @@ jobs:
   tag:
     name: "Set tag output"
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.tag.outputs.tag }}
     steps:
       - name: Set output
-        run: echo "TAG=${GITHUB_SHA:0:8}" >> $GITHUB_OUTPUT
+        id: tag
+        run: echo "tag=abcd" >> $GITHUB_OUTPUT
 
   artifacts:
     needs: [tag]
@@ -23,7 +26,7 @@ jobs:
     steps:
       - uses: hmarr/debug-action@v2
       - run: |
-          echo "${{ needs.tag.outputs.TAG }}"
+          echo "${{ needs.tag.outputs.tag }}"
 #       - uses: actions/upload-artifact@v3
 #         with:
 #           name: "tfplan"
